# django-boilerplate

./: pyproject.toml
main_app/: urls.py  views.py
my_project/: settings.py  urls.py
templates/: base.html
templates/account/: profile.html
