[tool.poetry]
name = "djang-boilerplate"
version = "0.1.0"
description = "my django boilerplate"
authors = ["Rollie John G Jaictin"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0"
python-decouple = "^3.5"
django-allauth = "^0.47.0"

[tool.poetry.dev-dependencies]
#pep8 = "^1.7.1"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
